＊將 source 設定為 ./dist ＊將 replace_destination_haed 預設刪除 dist/

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/giuliandrimba/s3-pusher.git"
   },
-  "main": "lib/s3-pusher",
+  "main": "lib/deploy",
   "engines": {
     "node": ">= 0.6.0"
   },
