--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s3-pusher",
+  "name": "vue-s3-pusher",
   "description": "Publish assets to Amazon's S3 service via CLI",
   "version": "0.1.4",
   "author": "Giulian Drimba (http://giuliandrimba.com.com/)",
